# wordle

./: bench.res  meson.build
app/: bench_nerdle.c  louan.c  nerdle.c  octordle.c  wordle.c  wordle_louan.c
src/: bot.c  bot.h  bot_wordle.c  color.c  color.h  console.c  coord.c  coord.h  dump.c  fr_words_5.h  fr_words_6.h  fr_words_7.h  fr_words_8.h  fr_words_9.h  lang.h  options.c  options.h  status.c  status.h  utils_x11.c  utils_x11.h  wordle.c  wordle.h  wordleplay_fr_5_words.h  words.c  words.h
src/nerdle/: equation.c  equation.h  lexer.c  lexer.h  nerdle.c  nerdle.h  parser.c  parser.h
src/words/: wordle_louan_fr_5_words.h  wordleplay_en_4_words.h  wordleplay_en_5_words.h  wordleplay_en_6_words.h  wordleplay_fr_4_words.h  wordleplay_fr_5_words.h  wordleplay_fr_6_words.h
tests/: meson.build  test.c  test.h  test_find_candidate.c  test_nerdle.c  test_word_is_valid.c  test_wordle.c
tools/: common.sh  get_fr_words.sh  get_words_from_wordle_louan.sh  get_words_from_wordleplay.sh
